配方添加工艺参数列表

--- a/PressHmi/App.config
+++ b/PressHmi/App.config
@@ -27,7 +27,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="PressDBEntities" connectionString="metadata=res://*/Entities.PressDB.csdl|res://*/Entities.PressDB.ssdl|res://*/Entities.PressDB.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=F:\Work\Fanuc\PressSolution\PressHmi\bin\Debug\PressDB.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="PressDBEntities" connectionString="metadata=res://*/Entities.PressDB.csdl|res://*/Entities.PressDB.ssdl|res://*/Entities.PressDB.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=PressDB.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
