--- a/PressHmi/PressHmi.csproj
+++ b/PressHmi/PressHmi.csproj
@@ -136,6 +136,9 @@
     <Compile Include="Model\SParaMachineInfoDto.cs" />
     <Compile Include="Model\StateMonitorInfoDto.cs" />
     <Compile Include="ViewModel\Message\MessageSubAlarmPageViewModel.cs" />
+    <Compile Include="ViewModel\System\SysetmInfoViewModel.cs" />
+    <Compile Include="ViewModel\System\SystemMacroViewModel.cs" />
+    <Compile Include="ViewModel\System\SystemPmcViewModel.cs" />
     <Compile Include="View\Converters\AlarmTypeStringConverter.cs" />
     <Compile Include="View\Converters\UpDownStringConverter.cs" />
     <Compile Include="Roles\Role.cs" />
@@ -250,8 +253,17 @@
     <Compile Include="View\Status\StateMonitorPage.xaml.cs">
       <DependentUpon>StateMonitorPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\System\SystemInfoPage.xaml.cs">
+      <DependentUpon>SystemInfoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\System\SystemMacroPage.xaml.cs">
+      <DependentUpon>SystemMacroPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\System\SystemMainPage.xaml.cs">
       <DependentUpon>SystemMainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\System\SystemPmcPage.xaml.cs">
+      <DependentUpon>SystemPmcPage.xaml</DependentUpon>
     </Compile>
     <Page Include="View\Dialogs\AutoAirSourceArrInputDialog.xaml">
       <SubType>Designer</SubType>
@@ -437,7 +449,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\System\SystemInfoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\System\SystemMacroPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\System\SystemMainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\System\SystemPmcPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
